--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -3,14 +3,14 @@
         <title>About me!</title>
     </head>
     <body>
-        <p>Hello!</p>
+        <h2>Hello!</h2>
         <p>My name is Jordyn Rabinowitz (she/her).
             <br>* I would like to get better at html, css, and js
             <br>* I am a sophmore majoring in CTD and minoring in space
             <br>* I enjoy snowboarding, climbing, lifting, traveling, and raving
             <br>
         </p> 
-        <a href="../img/jordyn.jpg">Image of me!</a>
+        <a href="../img/jordyn.jpg">Image of me!</a> <br>
         <a href="https://youtu.be/C018Qzg-6JI?si=dI-78qsOUpS1dmHJ">Funny animal videos</a>   
     </body>
 </html>
