--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -3,9 +3,10 @@
         <title>About me!</title>
     </head>
     <body>
-        <h2>Hello!</h2>
-        <p>My name is Jordyn Rabinowitz (she/her).
-            <br>* I would like to get better at html, css, and js
+        <h1>About me!</h1>
+        <h2>My name is Jordyn Rabinowitz (she/her).</h2>
+        <p>
+            * I would like to get better at html, css, and js
             <br>* I am a sophmore majoring in CTD and minoring in space
             <br>* I enjoy snowboarding, climbing, lifting, traveling, and raving
             <br>
