--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -1,10 +1,12 @@
 
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>About me!</title>
-    </head>
-    <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About me!</title>
+</head>
+<body>
         <h1>About me!</h1>
         <h2>My name is Jordyn Rabinowitz (she/her).</h2>
         <p>
