--- a/midterm/html-midterm/page1.html
+++ b/midterm/html-midterm/page1.html
@@ -8,6 +8,8 @@
             font-family: 'Times New Roman', Times, serif;
         }
     </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
         Week 3 Assignment
     </title>
