--- a/midterm/html-midterm/page5.html
+++ b/midterm/html-midterm/page5.html
@@ -22,6 +22,9 @@
 
     <h2>Page 1</h2>
     <ul>
+        <li>Added proper document heading</li>
+        <li>added closing "li" tag to item 3</li>
+        <li></li>
         <li></li>
     </ul>
 
