--- a/midterm/html-midterm/page2.html
+++ b/midterm/html-midterm/page2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mid-term Page 2</title>
+    <title>Page 2</title>
 </head>
 <body>
     <div class="navbar">
@@ -69,7 +69,7 @@
         similar arrangement to the ground floor but have no remarkable features. A cellar originally 
         sat just beneath the tap room but was extended south-east at a later date. The ground floor retains gas lighting
     </p>
-    <h6>History
+    <h6>History</h6>
     <hr>
     <p>
         A connection is sometimes made erroneously to the Beehive Inn further along Westgate, 
