--- a/wa/wa3.html
+++ b/wa/wa3.html
@@ -14,15 +14,57 @@
     <h1>Adam Sandler</h1>
     <nav>
         <ul>
-          <li><span>Home</span></li>
+          <li><a href="#general">General</a></li>
+          <li><a href="#early">Early Life</a></li>
           <li><a href="#career">Career</a></li>
-          <li><a href="#">Photos</a></li>
           <li><a href="#">Gear</a></li>
           <li><a href="#">Forum</a></li>
         </ul>
       </nav>
     </header>
     <hr>
-    <h2 id="career">Career</h2>
+    <br>
+    <p>
+      <b id="general">Adam Richard Sandler</b> (born September 9, 1966) is an American actor, comedian, screenwriter and producer. Primarily a comedic leading actor in film and television, his accolades include nominations for three Grammy Awards, five Primetime Emmy Awards, a Golden Globe Award, and a Screen Actors Guild Award. In 2023, Sandler was awarded the Mark Twain Prize for American Humor.
+    </p>
+    <p>
+      Sandler was a cast member on the NBC sketch comedy series Saturday Night Live from 1990 to 1995. He returned to Saturday Night Live as a host in 2019 earning a Primetime Emmy Award nomination. He has starred in Hollywood comedy films that cumulatively grossed over $2 billion worldwide.[2][3] Sandler had an estimated net worth of $420 million in 2020, and signed a new four-movie deal with Netflix worth over $250 million.[4]
+    </p>
+    <p>
+      Sandler's comedic roles include Billy Madison (1995), Happy Gilmore (1996), The Waterboy (1998), The Wedding Singer (1998), Big Daddy (1999), Mr. Deeds (2002), 50 First Dates (2004), The Longest Yard (2005), Click (2006), Grown Ups (2010), Just Go with It (2011), Grown Ups 2 (2013), Blended (2014), Murder Mystery (2019) and Hubie Halloween (2020). He has also taken dramatic roles in Punch-Drunk Love (2002), Reign Over Me (2007), The Meyerowitz Stories (2017), Uncut Gems (2019),[5] and Hustle (2022), with the latter three ranked as major career highlights.[6] He also voiced Davey, Whitey, and Eleanore in Eight Crazy Nights (2002) and Dracula in the first three films of the Hotel Transylvania franchise (2012–2018).
+    </p>
+    <p>
+      Several Sandler comedies, such as Jack and Jill (2011), have been panned, resulting in nine Golden Raspberry Awards and 37 Raspberry Award nominations, more than any actor except Sylvester Stallone.
+    </p>
+    <br>
+    <h2 id="early">Early Life</h2>
+    <hr>
+    <p>
+      Sandler was born in Brooklyn, New York, on September 9, 1966,[7] to Judith "Judy" (née Levine), a nursery school teacher, and Stanley Sandler, an electrical engineer.[7] His family is Jewish and descends from Russian-Jewish immigrants on both sides.[8][9][10] Sandler grew up in Manchester, New Hampshire, after moving there at the age of six.[11] He attended Manchester Central High School. As a teen, Sandler was in BBYO, a Jewish youth group. He graduated from New York University's Tisch School of the Arts in 1988.[12]
+    </p>
+
+    <h2 id="career">Career: 2016-present</h2>
+    <hr>
+    <p>
+      Sandler's first original film for Netflix was the Western comedy film The Ridiculous 6. Despite being universally panned by critics,[32] on January 6, 2016, it was announced by Netflix that the film had been viewed more times in 30 days than any other movie in Netflix history.[33] Sandler also starred in another Netflix film in 2016, titled The Do-Over.
+    </p>
+    <p>
+      Sandler starred in the 2017 Netflix film Sandy Wexler, in which he plays a talent manager who falls in love with one of his clients. He returned to dramatic territory in 2017 with Noah Baumbach's family drama The Meyerowitz Stories. In the film, Sandler plays Danny Meyerowitz, who is unemployed and separated from his wife. His experiencing dysfunctional relationships with his brother (Ben Stiller), his sister (Elizabeth Marvel), and his father (Dustin Hoffman). The film premiered in competition for the Palme d'Or at the 2017 Cannes Film Festival where his performance received favorable notices from critics.[5] Peter Debruge, film critic for Variety, wrote of his performance, "With no shtick to fall back on, Sandler is forced to act, and it's a glorious thing to watch".[34]
+    </p>
+    <p>
+      In 2018, Sandler starred in the Netflix film The Week Of alongside Chris Rock. He also starred in a Netflix stand-up special 100% Fresh, which was part of his company's Netflix deal and marked his first stand-up film in over two decades. The special was directed by longtime collaborator Steven Brill, while portions of the special was filmed by Paul Thomas Anderson, which marked his first project with Sandler since Punch-Drunk Love sixteen years prior.[35]
+    </p>
+    <p>
+      On May 4, 2019, Sandler made his first appearance as host of Saturday Night Live, ending the episode with a tribute to his friend and fellow former cast member Chris Farley.[36] Sandler received a Primetime Emmy Award for Outstanding Guest Actor in a Comedy Series nomination for his hosting stint. In June 2019, he starred alongside Jennifer Aniston in the Netflix film Murder Mystery, which broke the record for the biggest opening weekend in the company's history.[37]
+    </p>
+    <p>
+      In December 2019, Sandler starred in the crime thriller drama Uncut Gems, directed by the Safdie brothers.[38] The movie and Sandler's acting received critical acclaim and many end-of-year awards from critics, who noted this role as a career best for Sandler, for which he earned the Independent Spirit Award for Best Male Lead.[39][40]
+    </p>
+    <p>
+      In January 2020, Netflix announced a new four-movie deal with Happy Madison Productions worth up to $275 million.[41] Sandler starred in and wrote the 2020 Netflix film Hubie Halloween.
+    </p>
+    <p>
+      Sandler produced and starred in the 2022 sports drama film Hustle, which received critical acclaim. His performance in the film was repeatedly singled out for praise[42] and he received a nomination for a Screen Actors Guild Award.[43] On March 19th, 2023, Sandler was awarded the Kennedy Center’s Mark Twain Prize for American Humor. Many of Sandler's friends and fellow performers, including Ben Stiller, Conan O'Brien, Dana Carvey, and Judd Apatow, spoke at the event.[44]
+    </p>
 </body>
 </html>
