--- a/midterm/html-midterm/page5.html
+++ b/midterm/html-midterm/page5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 5</title>
+    <title>Mid-term Page 5</title>
 </head>
 <body>
     <div class="navbar">
@@ -29,6 +29,14 @@
         <li>missing closing tag for cell 3</li>
         <li>missing closing tag for 2nd row in the table</li>
         <li>missing closing tag for table</li>
+    </ul>
+
+    <h2>Page 2</h2>
+    <ul>
+        <li>missing closing tag for bold attribute</li>
+        <li>missing closing tag for h6, history</li>
+        <li>bold element has to be inside of h2</li>
+        <li>missing link in href</li>
     </ul>
 
 </body>
