--- a/wa/wa3.html
+++ b/wa/wa3.html
@@ -17,15 +17,17 @@
           <li><a href="#general">General</a></li>
           <li><a href="#early">Early Life</a></li>
           <li><a href="#career">Career</a></li>
-          <li><a href="#">Gear</a></li>
-          <li><a href="#">Forum</a></li>
+          <li><a href="#public">Public Image</a></li>
+          <li><a href="#personal">Personal Life</a></li>
         </ul>
       </nav>
     </header>
+    <main>
     <hr>
     <br>
     <p>
-      <b id="general">Adam Richard Sandler</b> (born September 9, 1966) is an American actor, comedian, screenwriter and producer. Primarily a comedic leading actor in film and television, his accolades include nominations for three Grammy Awards, five Primetime Emmy Awards, a Golden Globe Award, and a Screen Actors Guild Award. In 2023, Sandler was awarded the Mark Twain Prize for American Humor.
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/Adam_Sandler_Cannes_2017.jpg/440px-Adam_Sandler_Cannes_2017.jpg" alt="Adam Sandler" style="float:right;width:30%;height:30%; padding: 20px;">
+      <b id="general">Adam Richard Sandler</b> (born September 9, 1966) is an American actor, comedian, screenwriter and producer. Primarily a comedic leading actor in film and television, his accolades include nominations for three <a href="https://en.wikipedia.org/wiki/Grammy_Awards">Grammy Awards</a>, five Primetime Emmy Awards, a Golden Globe Award, and a Screen Actors Guild Award. In 2023, Sandler was awarded the Mark Twain Prize for American Humor.
     </p>
     <p>
       Sandler was a cast member on the NBC sketch comedy series Saturday Night Live from 1990 to 1995. He returned to Saturday Night Live as a host in 2019 earning a Primetime Emmy Award nomination. He has starred in Hollywood comedy films that cumulatively grossed over $2 billion worldwide.[2][3] Sandler had an estimated net worth of $420 million in 2020, and signed a new four-movie deal with Netflix worth over $250 million.[4]
@@ -40,13 +42,14 @@
     <h2 id="early">Early Life</h2>
     <hr>
     <p>
-      Sandler was born in Brooklyn, New York, on September 9, 1966,[7] to Judith "Judy" (née Levine), a nursery school teacher, and Stanley Sandler, an electrical engineer.[7] His family is Jewish and descends from Russian-Jewish immigrants on both sides.[8][9][10] Sandler grew up in Manchester, New Hampshire, after moving there at the age of six.[11] He attended Manchester Central High School. As a teen, Sandler was in BBYO, a Jewish youth group. He graduated from New York University's Tisch School of the Arts in 1988.[12]
+      Sandler was born in <a href="https://en.wikipedia.org/wiki/Brooklyn">Brooklyn</a>, New York, on September 9, 1966,[7] to Judith "Judy" (née Levine), a nursery school teacher, and Stanley Sandler, an electrical engineer.[7] His family is Jewish and descends from Russian-Jewish immigrants on both sides.[8][9][10] Sandler grew up in Manchester, New Hampshire, after moving there at the age of six.[11] He attended Manchester Central High School. As a teen, Sandler was in BBYO, a Jewish youth group. He graduated from New York University's Tisch School of the Arts in 1988.[12]
     </p>
-
+    <br>
     <h2 id="career">Career: 2016-present</h2>
     <hr>
     <p>
-      Sandler's first original film for Netflix was the Western comedy film The Ridiculous 6. Despite being universally panned by critics,[32] on January 6, 2016, it was announced by Netflix that the film had been viewed more times in 30 days than any other movie in Netflix history.[33] Sandler also starred in another Netflix film in 2016, titled The Do-Over.
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Men_Women_and_Children_23_%2815087355127%29.jpg/440px-Men_Women_and_Children_23_%2815087355127%29.jpg" alt="Adam Sandler" style="float:left;width:20%;height:20%; padding: 20px;">
+      Sandler's first original film for Netflix was the Western comedy film <a href="https://en.wikipedia.org/wiki/The_Ridiculous_6">The Ridiculous 6</a>. Despite being universally panned by critics,[32] on January 6, 2016, it was announced by Netflix that the film had been viewed more times in 30 days than any other movie in Netflix history.[33] Sandler also starred in another Netflix film in 2016, titled The Do-Over.
     </p>
     <p>
       Sandler starred in the 2017 Netflix film Sandy Wexler, in which he plays a talent manager who falls in love with one of his clients. He returned to dramatic territory in 2017 with Noah Baumbach's family drama The Meyerowitz Stories. In the film, Sandler plays Danny Meyerowitz, who is unemployed and separated from his wife. His experiencing dysfunctional relationships with his brother (Ben Stiller), his sister (Elizabeth Marvel), and his father (Dustin Hoffman). The film premiered in competition for the Palme d'Or at the 2017 Cannes Film Festival where his performance received favorable notices from critics.[5] Peter Debruge, film critic for Variety, wrote of his performance, "With no shtick to fall back on, Sandler is forced to act, and it's a glorious thing to watch".[34]
@@ -66,5 +69,37 @@
     <p>
       Sandler produced and starred in the 2022 sports drama film Hustle, which received critical acclaim. His performance in the film was repeatedly singled out for praise[42] and he received a nomination for a Screen Actors Guild Award.[43] On March 19th, 2023, Sandler was awarded the Kennedy Center’s Mark Twain Prize for American Humor. Many of Sandler's friends and fellow performers, including Ben Stiller, Conan O'Brien, Dana Carvey, and Judd Apatow, spoke at the event.[44]
     </p>
+    <br>
+    <h2 id="public">Public image</h2>
+    <hr>
+    <p>
+      Sandler has been referenced multiple times in various media, including in the TV shows <a href="https://en.wikipedia.org/wiki/The_Simpsons">The Simpsons</a>, in the episode "Monty Can't Buy Me Love",[45] in the Family Guy episode "Stew-Roids",[46] and in the South Park episode "You're Getting Old".[47] He was also referenced in the video game Half-Life: Opposing Force.[48] The HBO series Animals episode "The Trial" features a mock court case to decide whether Sandler or Jim Carrey is a better comedian.
+    </p>
+    <p>
+      In 2021, Vogue named Sandler the year's fashion icon for popularizing a "grocery-run look", characterized by oversized T-shirts, XXL pants, and Nike sneakers dubbed as "Adam Sandler style".[49] Menswear brand Old Jewish Men sells a line of basketball shorts inspired by the style.[50] Speaking on the title with Esquire, Sandler remarked: "It took a while. I was working that angle for years. For a while I was like, 'Please accept me and the way I dress.' And 30 years later, they finally came around."[51]
+    </p>
+    <br>
+    <h2 id="personal">Personal life</h2>
+    <hr>
+    <p>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/AdamSandlerwithdaughtersFeb11.jpg/440px-AdamSandlerwithdaughtersFeb11.jpg" alt="Adam Sandler" style="float:right;width:15%;height:15%; padding: 20px;">
+      Sandler has been married to Jacqueline "Jackie" Sandler (née Titone) since 2003.[52] She converted to Sandler's religion, Judaism.[53] The couple have two daughters, Sadie (b. May 2006)[54] and Sunny (b. November 2008).[55] Sandler's wife and children often appear in his films.[56][57] Adam's nephew Jared has also been featured in his films, such as Pixels and Home Team.[58]
+    </p>
+    <p>
+      In 2007, Sandler made a $1 million donation to <a href="https://en.wikipedia.org/wiki/Boys_%26_Girls_Clubs_of_America">the Boys & Girls Clubs of America</a> in Manchester, New Hampshire.[59]
+    </p>
+    <p>
+      Sandler has not publicly discussed his political leanings. It has been reported that he is registered to vote as a Republican. He performed at the 2004 Republican National Convention, and he contributed $2,100 to Rudy Giuliani's 2008 presidential campaign (the maximum amount allowed at the time).[60]
+    </p>
+    <br>
+  </main>
+  <footer>
+    <h3>See also...</h3>
+    <ul>
+      <li><a href="https://juliakirk.github.io/wa/wa3.html">Lighting</a></li>
+      <li><a href="https://adrianornelasr.github.io/wa/wa3.html">Satire</a></li>
+      <li><a href="https://rachelpoe.github.io/wa/wa3.html">I Love NY Logo</a></li>
+    </ul>
+  </footer>
 </body>
 </html>
