fixed midterm html

--- a/midterm/html-midterm/page5.html
+++ b/midterm/html-midterm/page5.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,6 +24,8 @@
 
     <h2>Page 1</h2>
     <ul>
+        <li>missing meta</li>
+        <li>added lang to html</li>
         <li>missing closing tag for item 3</li>
         <li>missing closing tag for paragraph</li>
         <li>missing closing tag for cell 3</li>
@@ -35,9 +37,24 @@
     <ul>
         <li>missing closing tag for bold attribute</li>
         <li>missing closing tag for h6, history</li>
-        <li>bold element has to be inside of h2</li>
-        <li>missing link in href</li>
+        <li>missing link in href, no spaces allowed in href</li>
+        <li>changed heading numbers to make more sense</li>
     </ul>
-
+    <h2>Page 3</h2>
+    <ul>
+        <li>added doctype html</li>
+        <li>added title, meta, and link to css</li>
+        <li>moved footnote to the bottom of page using css</li>
+    </ul>
+    
+    <h2>Page 4</h2>
+    <ul>
+        <li>added doctype html</li>
+        <li>orange cat missing td wrapper</li>
+        <li>creature missing td tag</li>
+        <li>dogs singing missing closing td tag</li>
+        <li>images missing alt attribute</li>
+        <li>changed order of images so that the columns reflect the titles</li>
+    </ul>
 </body>
 </html>
