--- a/midterm/html-midterm/page2.html
+++ b/midterm/html-midterm/page2.html
@@ -34,7 +34,7 @@
             The structure was granted protection as a grade II listed building by Historic England on 13 July 2022. 
             The owners have subsequently applied to convert the pub into offices.
         </p>
-    <h3>Description</h3>
+    <h2>Description</h2>
     <hr>
     <p>
         The three-storey building is stone built with a slate roof and faces onto the B6144 road (Westgate). 
@@ -50,7 +50,7 @@
         housing a kitchen, extends from the left (south-east) elevation, and another,
         an extension to the music room, extends from the left hand part of the rear elevation.
     </p>
-    <h2><b>Interior</b></h2>
+    <h2>Interior</h2>
     <p>
         The ground floor is centred around a lobby running from the front to the rear; with two main rooms on either side of the lobby.
         The lobby is also used by drinkers who can be served by a hatch that opens onto the bar in the tap room to the right.
@@ -71,7 +71,7 @@
         similar arrangement to the ground floor but have no remarkable features. A cellar originally 
         sat just beneath the tap room but was extended south-east at a later date. The ground floor retains gas lighting
     </p>
-    <h6>History</h6>
+    <h2>History</h2>
     <hr>
     <p>
         A connection is sometimes made erroneously to the Beehive Inn further along Westgate, 
