--- a/midterm/html-midterm/page3.html
+++ b/midterm/html-midterm/page3.html
@@ -1,5 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/cars.css">
+    <title>Mid-term Page 3</title>
 <!-- This is missing a title, meta, and a link to a css stylesheet found in the css subfolder. Please add them.-->
 </head>
 <body>
