--- a/midterm/html-midterm/page4.html
+++ b/midterm/html-midterm/page4.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -34,19 +34,19 @@
             <th>Other?</th>
         </tr>
         <tr>
-            <td><img src="img/dogsFrolic.png"></td>
-            <td><img src="img/dogSinging.png">
-            <td><img src="img/labLab.png"></td>
+            <td><img src="img/dogsFrolic.png" alt="dogs frolic"></td>
+            <td><img src="img/boxingCats.png" alt="cats"></td>
+            <td><img src="img/diamondAlien.png" alt="alien"></td>
         </tr>
         <tr>
-            <td><img src="img/boxingCats.png"></td>
-            <img src="img/orangeCat.png">
-            <td><img src="img/sunCat.png"></td>
+            <td><img src="img/dogSinging.png" alt="dog singing"></td>
+            <td><img src="img/orangeCat.png" alt="cat"></td>
+            <td><img src="img/creature.png" alt="creature"></td>
         </tr>
         <tr>
-            <td><img src="img/diamondAlien.png"></td>
-            <img src="img/creature.png"></td>
-            <td><img src="img/aliensPeace.png"></td>
+            <td><img src="img/labLab.png" alt="lab"></td>
+            <td><img src="img/sunCat.png" alt="cat"></td>
+            <td><img src="img/aliensPeace.png" alt="alien"></td>
         </tr>
 
     </table>
