--- a/midterm/html-midterm/page5.html
+++ b/midterm/html-midterm/page5.html
@@ -31,6 +31,7 @@
         <li>missing closing tag for cell 3</li>
         <li>missing closing tag for 2nd row in the table</li>
         <li>missing closing tag for table</li>
+        <li>improper path to image.png</li>
     </ul>
 
     <h2>Page 2</h2>
