--- a/wa/wa4.html
+++ b/wa/wa4.html
@@ -14,13 +14,13 @@
     </header>
     <article>
       <img src="../img/professional.jpg" alt="A picture of Jordyn">
-      <p>50 My Street<br>
-         The Town<br>
-         Gray Peach<br>
-         UK<br>
-         ZO50 1MU<br>
-        <strong>Tel</strong>: 01234 567 890<br>
-        <strong>Mail</strong>: chris@nothere.com</p>
+      <p>800 My Street<br>
+         Boulder<br>
+         Colorado<br>
+         USA<br>
+         80303<br>
+        <strong>Tel</strong>: 847 220 3329<br>
+        <strong>Mail</strong>: jordyn@nothere.com</p>
     </article>
     <footer>
       <p>Editing, writing, and web development services</p>
