--- a/wa/wa4.html
+++ b/wa/wa4.html
@@ -8,22 +8,41 @@
   </head>
   <body>
 
-  <section class="card">
+
+    <section class="card">
+      <header>
+        <h2>Chris Mills</h2>
+      </header>
+      <article>
+        <img src="../img/chris.jpg" alt="A picture of Chris - a man with glasses, a beard, and a silly wooly hat">
+        <p>50 My Street<br>
+           The Town<br>
+           Gray Peach<br>
+           UK<br>
+           ZO50 1MU<br>
+          <strong>Tel</strong>: 01234 567 890<br>
+          <strong>Mail</strong>: chris@nothere.com</p>
+      </article>
+      <footer>
+        <p>Editing, writing, and web development services</p>
+      </footer>
+    </section>
+
+  <section class="card2">
     <header>
       <h2>Jordyn Rabinowitz</h2>
     </header>
     <article>
       <img src="../img/professional.jpg" alt="A picture of Jordyn">
-      <p>800 My Street<br>
-         Boulder<br>
-         Colorado<br>
-         USA<br>
-         80303<br>
+      <p>
+        <strong>Major:</strong> CTD | <strong>Minor:</strong> Space <br>
+        <strong>Focus:</strong> Web and game development, XR <br>
+        <strong>Interests:</strong> Lifting, VR, snowboarding <br>
         <strong>Tel</strong>: 847 220 3329<br>
-        <strong>Mail</strong>: jordyn@nothere.com</p>
+        <strong>Mail</strong>: jora8609@colorado.edu</p>
     </article>
     <footer>
-      <p>Editing, writing, and web development services</p>
+      <p>Game and web development services</p>
     </footer>
   </section>
 
