--- a/midterm/html-midterm/page5.html
+++ b/midterm/html-midterm/page5.html
@@ -24,38 +24,38 @@
 
     <h2>Page 1</h2>
     <ul>
-        <li>missing meta</li>
-        <li>added lang to html</li>
-        <li>missing closing tag for item 3</li>
-        <li>missing closing tag for paragraph</li>
-        <li>missing closing tag for cell 3</li>
-        <li>missing closing tag for 2nd row in the table</li>
-        <li>missing closing tag for table</li>
-        <li>improper path to image.png</li>
+        <li>There is missing meta in the head. It helps initialize the page.</li>
+        <li>I added lang to html because it was missing and the W3 validator recomends including it.</li>
+        <li>There is a missing closing tag for item 3. I added it in because otherwise the code will not be formatted properly and will not be validated.</li>
+        <li>There is missing closing tag for the paragraph. I added it in because otherwise the code will not be formatted properly and will not be validated. </li>
+        <li>There is a missing closing tag for cell 3.I added it in because otherwise the code will not be formatted properly and will not be validated.</li>
+        <li>There is a missing closing tag for 2nd row in the table. I added it in because otherwise the code will not be formatted properly and will not be validated.</li>
+        <li>There is a missing closing tag for table. I added it in because otherwise the code will not be formatted properly and will not be validated.</li>
+        <li>There is an improper path to image.png. I added the proper path within the folder because otherwise the image would not show up.</li>
     </ul>
 
     <h2>Page 2</h2>
     <ul>
-        <li>missing closing tag for bold attribute</li>
-        <li>missing closing tag for h6, history</li>
-        <li>missing link in href, no spaces allowed in href</li>
-        <li>changed heading numbers to make more sense</li>
+        <li>There is a missing closing tag for bold attribute. I added it in because otherwise the code will not be formatted properly and will not be validated.</li>
+        <li>There is a missing closing tag for h6, history. I added it in because otherwise the code will not be formatted properly and will not be validated.</li>
+        <li>There is a missing link in href (where do I go), no spaces allowed in href. I added the proper link.</li>
+        <li>I changed the heading numbers to make more sense. So the page is layed out properly.</li>
     </ul>
     <h2>Page 3</h2>
     <ul>
-        <li>added doctype html</li>
-        <li>added title, meta, and link to css</li>
-        <li>moved footnote to the bottom of page using css</li>
+        <li>I added doctype html, so the page validates.</li>
+        <li>I added title, meta, and link to css. It needs these attributes in the head to be validated and styled properly.</li>
+        <li>I moved footnote to the bottom of page using css by making the position relative. This makes the page layout correct. Before this the footer was in the center of the page.</li>
     </ul>
     
     <h2>Page 4</h2>
     <ul>
-        <li>added doctype html</li>
-        <li>orange cat missing td wrapper</li>
-        <li>creature missing td tag</li>
-        <li>dogs singing missing closing td tag</li>
-        <li>images missing alt attribute</li>
-        <li>changed order of images so that the columns reflect the titles</li>
+        <li>I added doctype html, so the page validates.</li>
+        <li>The orange cat was missing td tag. I added it in because otherwise the code will not be formatted properly and will not be validated. </li>
+        <li>The creature was missing td tag. I added it in because otherwise the code will not be formatted properly and will not be validated.</li>
+        <li>The dogs singing was missing closing td tag. I added it in because otherwise the code will not be formatted properly and will not be validated.</li>
+        <li>The images missing alt attribute. I added it in because otherwise the code will not be validated.</li>
+        <li>I changed the order of images so that the columns reflect the titles.</li>
     </ul>
 </body>
 </html>
