--- a/midterm/html-midterm/page5.html
+++ b/midterm/html-midterm/page5.html
@@ -54,7 +54,7 @@
         <li>The orange cat was missing td tag. I added it in because otherwise the code will not be formatted properly and will not be validated. </li>
         <li>The creature was missing td tag. I added it in because otherwise the code will not be formatted properly and will not be validated.</li>
         <li>The dogs singing was missing closing td tag. I added it in because otherwise the code will not be formatted properly and will not be validated.</li>
-        <li>The images missing alt attribute. I added it in because otherwise the code will not be validated.</li>
+        <li>The images are missing alt attribute. I added it in because otherwise the code will not be validated.</li>
         <li>I changed the order of images so that the columns reflect the titles.</li>
     </ul>
 </body>
