--- a/wa/wa8/week8.html
+++ b/wa/wa8/week8.html
@@ -18,6 +18,6 @@
         <a>More</a>
         <a>Socials</a>
     </nav>
-    <img src="https://d7hftxdivxxvm.cloudfront.net/?quality=80&resize_to=width&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2Fh_NFmfCdg7-YVZDOPnDkrQ%2Fnormalized.jpg&width=910">
+    <img src="https://d7hftxdivxxvm.cloudfront.net/?quality=80&resize_to=width&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2Fh_NFmfCdg7-YVZDOPnDkrQ%2Fnormalized.jpg&width=910" alt="flowers">
 </body>
 </html>
