--- a/wa/wa10/wa10.html
+++ b/wa/wa10/wa10.html
@@ -9,15 +9,25 @@
     <style>
       button, input{
         background-color: plum;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
       }
     .center{
-      display: inline-block;
-      align-items: center;
+      text-align: center;
+      background-color: white;
+      padding: 5%;
     }
+    
 
-      body {
-        font-family: helvetica, sans-serif;
+
+      body { 
+        display: block;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            margin-left: 30%;
+            margin-right: 30%;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
         width: 350px;
         background-color: lightblue;
       }
