--- a/wa/wa12/wa12.html
+++ b/wa/wa12/wa12.html
@@ -79,8 +79,7 @@
         <option value="movies">Movies</option>
         <option value="success">Success</option>
     </select>
-    <div><q id="quote-text" style="visibility: hidden;"></q></div>
-    <div id="author-text"></div>
+    <div class="quote"><q id="quote-text" style="visibility: hidden;"></q></div>
     <button id="quote-btn">Generate Quote</button>
 </div>
 
