--- a/wa/wa12/wa12.html
+++ b/wa/wa12/wa12.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inspiration Page</title>
+    <title>Quote Generator</title>
     <link rel="stylesheet" href="wa12.css">
 </head>
 <body>
